--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,17 @@ dependencies:
   firebase_storage: ^10.2.4
   pull_to_refresh: ^2.0.0
   file_picker: ^4.3.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
