--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   file_picker: ^4.3.0
   flutter_launcher_icons: ^0.9.2
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
