--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   file_picker: ^4.3.0
   flutter_launcher_icons: ^0.9.2
   qr_flutter: ^4.0.0
+  qr_code_scanner: ^0.6.1
+  vibration: ^1.7.3
+  uuid: ^3.0.5
+  google_fonts: 2.2.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
