--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   qr_flutter: ^4.0.0
   qr_code_scanner: ^0.6.1
-  vibration: ^1.7.3
+  vibration: ^1.7.4-nullsafety.0
   uuid: ^3.0.5
   google_fonts: 2.2.0
   confirm_dialog: ^1.0.1
